# trik-hash-py

./: .gitignore  README.md  manifest.json  pyproject.toml  trikhub.json
src/trik_hash_py/: main.py
src/trik_hash_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
